--- a/PersonManagementTool/PersonManagementTool/MainWindow.xaml
+++ b/PersonManagementTool/PersonManagementTool/MainWindow.xaml
@@ -4,9 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonManagementTool"
+        xmlns:regions="http://prismlibrary.com/"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="3*" />
+        </Grid.ColumnDefinitions>
+
+        <ContentControl Grid.Column="0" regions:RegionManager.RegionName="{x:Static local:RegionNames.SelectionRegionName}" />
+        <ContentControl Grid.Column="1" regions:RegionManager.RegionName="{x:Static local:RegionNames.ContentRegionName}" />
     </Grid>
 </Window>
