Configured container, registered views at regions and created repository dummy.

--- a/PersonManagementTool/PersonManagementTool/Views/PersonSelectionView.xaml
+++ b/PersonManagementTool/PersonManagementTool/Views/PersonSelectionView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PersonManagementTool.Views"
              xmlns:viewModels="clr-namespace:PersonManagementTool.ViewModels"
+             xmlns:mvvm="http://prismlibrary.com/"
+             mvvm:ViewModelLocator.AutoWireViewModel="True"
              d:DataContext="{d:DesignInstance viewModels:PersonSelectionDesignViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
