--- a/PersonManagementTool/PersonManagementTool/Views/PersonSelectionView.xaml
+++ b/PersonManagementTool/PersonManagementTool/Views/PersonSelectionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PersonManagementTool.Views.PersonSelectionView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,18 @@
              xmlns:local="clr-namespace:PersonManagementTool.Views"
              xmlns:viewModels="clr-namespace:PersonManagementTool.ViewModels"
              xmlns:mvvm="http://prismlibrary.com/"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" x:Class="PersonManagementTool.Views.PersonSelectionView"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
-             d:DataContext="{d:DesignInstance viewModels:PersonSelectionDesignViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance {x:Type viewModels:PersonSelectionDesignViewModel}, IsDesignTimeCreatable=True}"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding InitializationCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
     <ListBox ItemsSource="{Binding AvailablePersons}">
         <ListBox.ItemTemplate>
             <DataTemplate>
