--- a/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
+++ b/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PersonManagementTool.Views.PersonDetailsView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,29 +6,37 @@
              xmlns:local="clr-namespace:PersonManagementTool.Views"
              xmlns:mvvm="http://prismlibrary.com/"
              xmlns:viewModels="clr-namespace:PersonManagementTool.ViewModels"
+             xmlns:Converter="clr-namespace:PersonManagementTool.Converter" x:Class="PersonManagementTool.Views.PersonDetailsView"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance {x:Type viewModels:PersonDetailsDesignViewModel}, IsDesignTimeCreatable=True}"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+    <UserControl.Resources>
+        <Converter:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+        <Converter:NullToVisibilityConverter x:Key="InvertedNullToVisibilityConverter" IsInverted="True"/>
+    </UserControl.Resources>
+    <Grid>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedPerson, Converter={StaticResource InvertedNullToVisibilityConverter}}" ><Run Text="Bitte wählen Sie eine Person auf der linken Seite."/></TextBlock>
+        <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedPerson, Converter={StaticResource NullToVisibilityConverter}}" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition MinWidth="100"/>
-        </Grid.ColumnDefinitions>
-        
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Column="0" Grid.Row="0">Vorname</Label>
-        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SelectedPerson.FirstName}" />
+            </Grid.ColumnDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="1">Nachname</Label>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding SelectedPerson.LastName}" />
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="2">Geburtstag</Label>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding SelectedPerson.BirthDate, StringFormat=d}" />
+            <Label Grid.Column="0" Grid.Row="0" Content="Vorname"/>
+            <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding SelectedPerson.FirstName}" />
+
+            <Label Grid.Column="0" Grid.Row="1" Content="Nachname"/>
+            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding SelectedPerson.LastName}" />
+
+            <Label Grid.Column="0" Grid.Row="2" Content="Geburtstag"/>
+            <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding SelectedPerson.BirthDate, StringFormat=d}" />
+        </Grid>
     </Grid>
 </UserControl>
