--- a/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
+++ b/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
@@ -25,16 +25,26 @@
     </i:Interaction.Triggers>
     <Grid>
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedPerson, Converter={StaticResource InvertedNullToVisibilityConverter}}" ><Run Text="Bitte wählen Sie eine Person auf der linken Seite."/></TextBlock>
-        <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedPerson, Converter={StaticResource NullToVisibilityConverter}}" >
+        <Grid Visibility="{Binding SelectedPerson, Converter={StaticResource NullToVisibilityConverter}}" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            
+            
+            <Grid Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition MinWidth="100"/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
                 <RowDefinition />
             </Grid.RowDefinitions>
 
@@ -47,7 +57,15 @@
             <Label Grid.Column="0" Grid.Row="2" Content="Geburtstag"/>
             <TextBox Grid.Column="1" Grid.Row="2" Margin="4" Text="{Binding SelectedPerson.BirthDate, StringFormat=d, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
         
-            <Button Grid.Column="1" Grid.Row="3" Content="Speichern" Margin="4" Command="{Binding SaveCommand}" />
+        
+        <Button Grid.Column="1" Grid.Row="3" Content="Speichern" Margin="4" Command="{Binding SaveCommand}" />
+        </Grid>    
+            <StackPanel Margin="4,0" Grid.Column="1" Orientation="Vertical">
+                <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Content="Generiere Zahlen" Command="{Binding GenerateNumbersCommand}" Margin="4"></Button>
+
+                <ListBox Grid.Row="6" Grid.ColumnSpan="2" Height="200" ItemsSource="{Binding SelectedPerson.Numbers}"></ListBox>
+            </StackPanel>
+            
         </Grid>
     </Grid>
 </UserControl>
