--- a/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
+++ b/PersonManagementTool/PersonManagementTool/Views/PersonDetailsView.xaml
@@ -26,46 +26,51 @@
     <Grid>
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedPerson, Converter={StaticResource InvertedNullToVisibilityConverter}}" ><Run Text="Bitte wählen Sie eine Person auf der linken Seite."/></TextBlock>
         <Grid Visibility="{Binding SelectedPerson, Converter={StaticResource NullToVisibilityConverter}}" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            
-            
-            <Grid Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition MinWidth="100"/>
-            </Grid.ColumnDefinitions>
-
             <Grid.RowDefinitions>
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition />
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="35"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" Content="Vorname"/>
-            <TextBox Grid.Column="1" Grid.Row="0" Margin="4" Text="{Binding SelectedPerson.FirstName, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
 
-            <Label Grid.Column="0" Grid.Row="1" Content="Nachname"/>
-            <TextBox Grid.Column="1" Grid.Row="1" Margin="4" Text="{Binding SelectedPerson.LastName, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
+            <Grid Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="-9,60,140,40.161" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition MinWidth="100"/>
+                </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="2" Content="Geburtstag"/>
-            <TextBox Grid.Column="1" Grid.Row="2" Margin="4" Text="{Binding SelectedPerson.BirthDate, StringFormat=d, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
-        
-        
-        <Button Grid.Column="1" Grid.Row="3" Content="Speichern" Margin="4" Command="{Binding SaveCommand}" />
-        </Grid>    
-            <StackPanel Margin="4,0" Grid.Column="1" Orientation="Vertical">
-                <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Content="Generiere Zahlen" Command="{Binding GenerateNumbersCommand}" Margin="4"></Button>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
 
-                <ListBox Grid.Row="6" Grid.ColumnSpan="2" Height="200" ItemsSource="{Binding SelectedPerson.Numbers}"></ListBox>
+                <Label Grid.Column="0" Grid.Row="0" Content="Vorname"/>
+                <TextBox Grid.Column="1" Grid.Row="0" Margin="4" Text="{Binding SelectedPerson.FirstName, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Label Grid.Column="0" Grid.Row="1" Content="Nachname"/>
+                <TextBox Grid.Column="1" Grid.Row="1" Margin="4" Text="{Binding SelectedPerson.LastName, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Label Grid.Column="0" Grid.Row="2" Content="Geburtstag"/>
+                <TextBox Grid.Column="1" Grid.Row="2" Margin="4" Text="{Binding SelectedPerson.BirthDate, StringFormat=d, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
+
+
+                <Button Grid.Column="1" Grid.Row="3" Content="Speichern" Margin="4" Command="{Binding SaveCommand}" />
+            </Grid>
+            <StackPanel Margin="4" Grid.Row="0" Grid.Column="1" Orientation="Vertical">
+                <Button Content="Generiere Zahlen" Command="{Binding GenerateNumbersCommand}" Margin="4"></Button>
+
+                <ListBox Height="200" ItemsSource="{Binding SelectedPerson.Numbers}"></ListBox>
             </StackPanel>
-            
+
+            <Button Grid.Column="1" Grid.Row="1" Margin="4" Command="{Binding ShowAnalyzationCommand}">Auswerten</Button>
         </Grid>
     </Grid>
 </UserControl>
